css style fixing (in mobile) for dashboard and enable momentum scrolling with unsupported -webkit-overflow-scrolling (needs to be tested on android)

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,5 +9,6 @@ body {
 }
 
 .overflow-y-auto {
-    overflow-y: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
